/*
 * Run this project by:
 * 1. open shell and set JDK with "JAVA_HOME=/usr/java/jdk1.8.0_45"
 * 2. gradle --version (needs to pick up 1.8)
 * 3. gradle clean build
 */

apply plugin: 'java'
apply plugin: 'idea'

idea {
    project {
        languageLevel = '1.8'
    }
}

group = 'co.bk'
version = '1.0-SNAPSHOT'

description = """java8-mooc"""

sourceCompatibility = 1.8
targetCompatibility = 1.8

sourceSets {
    main {
        java {
            srcDirs = ['src/main/java']
        }
        resources {
            srcDirs = ['src/main/resources']
        }
    }

    test {
        java {
            srcDirs = ['src/test/java']
        }
        resources {
            srcDirs = ['src/test/resources']
        }
    }
}

repositories {
    mavenCentral()
}

dependencies {

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'

    //testCompile 'junit:junit:4.11'
}

test {
    useJUnitPlatform()
}
